objects/User__c.object
<CustomObject>
    <fields>
        <fullName>CSN_Planner_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSN Planner User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSN_Supplier_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSN Supplier User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cvent_Account_ID__c</fullName>
        <label>Cvent Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Account__c</fullName>
        <label>Cvent Account</label>
        <referenceTo>Cvent_Accounts__c</referenceTo>
        <relationshipName>Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Login_Date__c</fullName>
        <label>First Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Login_Type__c</fullName>
        <label>Login Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Status</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Free Supplier</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Free RFP</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Ended Trial</fullName>
                </value>
                <value>
                    <fullName>No License</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_info__c</fullName>
        <label>Product info</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>CT-Affiliate Program</fullName>
                </value>
                <value>
                    <fullName>CT-Mobile</fullName>
                </value>
                <value>
                    <fullName>CT-Ticketing</fullName>
                </value>
                <value>
                    <fullName>eMarketing</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>SMM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>User Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <label>Active User</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User Name/Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>e_Marketing_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>e-Marketing User</label>
        <type>Checkbox</type>
    </fields>
    <label>User (Custom)</label>
    <nameField>
        <displayFormat>User# {00000000}</displayFormat>
        <label>User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>